--- a/package.json
+++ b/package.json
@@ -15,7 +15,6 @@
     "ejs": "^3.1.10",
     "express": "^5.1.0",
     "express-session": "^1.18.1",
-    "mongoose": "^8.13.2",
-    "nodemailer": "^6.10.0"
+    "mongoose": "^8.13.2"
   }
 }
